# AmoebaSim

./: CMakeLists.txt  README.md
Docs/: DevelopmentObjectives.md
OpenGL/src/: Object.cpp  World.cpp  main.cpp
src/Sim/: MC_core.cpp
